# paservices

./: .env  .env.production  .env.test  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  PROJECT_STRUCTURE.md  README.md  alembic.ini  commands.md  deployment-checklist.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  merge_code.py  output.txt  prd.md  properties.csv  properties2.csv  property-for-sale  pyproject.toml  scrip.py  swagger_docs.html  test_output.txt
auth_service/: .env.dev  .env.example  .env.prod.gpg  Dockerfile  Dockerfile.dev  Dockerfile.prod  MIGRATIONS.md  README.md  alembic.ini  check_db.py  deployment_test.sh  docker-compose.dev.yml  docker-compose.local-prod-test.yml  docker-compose.migrations.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  prd.md  pre-commit-config.yaml  pyproject.toml  pytest.ini  pytest_custom.py  setup_test_env.sh  test_alembic.ini  test_db_connection.py  todo.md
auth_service/alembic/: env.py
auth_service/alembic/versions/: 97de196d59aa_initial_schema.py
auth_service/scripts/: auth_test_migrations.py  copy_auth_schema.py  create_migration.sh  create_oauth_client.py  db_test.py  setup_database.sh  verify_migrations.py
auth_service/sql/: README.md  auth_schema.sql  get_user_rbac_claims.sql  test_user_rbac_claims.sql
auth_service/src/auth_service/: bootstrap.py  config.py  db.py  logging_config.py  main.py  models.py  rate_limiting.py  security.py  security_audit.py  supabase_client.py
auth_service/src/auth_service/crud/: __init__.py  user_crud.py
auth_service/src/auth_service/dependencies/: __init__.py  app_deps.py  user_deps.py
auth_service/src/auth_service/models/: __init__.py  app_client.py  app_client_refresh_token.py  app_client_role.py  permission.py  profile.py  role.py  role_permission.py  user_role.py
auth_service/src/auth_service/routers/: _admin_client_role_routes.py  _admin_client_routes.py  _admin_permission_routes.py  _admin_role_permission_routes.py  _admin_role_routes.py  _admin_user_role_routes.py  admin_client_role_routes.py  admin_client_routes.py  admin_client_routes_new.py  admin_permission_routes.py  admin_role_permission_routes.py  admin_role_routes.py  admin_routes.py  admin_user_role_routes.py  token_routes.py  user_auth_routes.py
auth_service/src/auth_service/schemas/: __init__.py  app_client_role_schemas.py  app_client_schemas.py  permission_schemas.py  role_permission_schemas.py  role_schemas.py  user_role_schemas.py  user_schemas.py
auth_service/src/auth_service/tools/: db_test.py
auth_service/test_migrations/: env.py
auth_service/test_migrations/versions/: e876aae093ca_resolve_orm_relationship_warnings.py  efdcd22552dc_initial_schema_setup.py
auth_service/tests/: conftest.py  debug_routes.py  mocks.py  test_bootstrap.py  test_db_connection.py  test_db_connection_pytest.py  test_email_verification.py  test_exception_handlers.py  test_health.py  test_helpers.py  test_supabase_client.py  test_user_registration.py
auth_service/tests/fixtures/: __init__.py  client.py  db.py  helpers.py  mocks.py
auth_service/tests/integration/: test_deployment_fixes.py  test_rate_limiting.py  test_user_auth_routes.py  test_user_registration_flow.py
auth_service/tests/integration/crud/: test_profile_crud.py
auth_service/tests/integration/routers/: test_admin_client_role_routes.py  test_admin_client_routes.py  test_admin_permission_routes.py  test_admin_role_permission_routes.py  test_admin_role_routes.py  test_admin_user_role_routes.py  test_login_routes.py  test_logout_routes.py  test_password_management_routes.py  test_registration_routes.py  test_token_routes.py  test_user_profile_routes.py
auth_service/tests/unit/: test_authentication_edge_cases.py  test_dependencies.py  test_email_verification.py  test_magic_link_login.py  test_oauth_login.py  test_password_reset.py  test_security.py  test_user_crud.py  test_user_schemas.py
auth_service/tests/unit/dependencies/: test_user_deps.py
auth_service/tests/unit/models/: test_app_client_model.py  test_app_client_refresh_token_model.py  test_app_client_role_model.py  test_permission_model.py  test_profile_model.py  test_role_model.py  test_role_permission_model.py  test_user_role_model.py
auth_service/tests/utils/: test_bootstrap_fix.py  test_db_conn.py  test_supabase_admin.py
data_capture_rightmove_service/: .env.prod.gpg  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  env.test  pyproject.toml
db/: schema.sql
docs/: admin_bootstrapping.md  deployment.md  development.md  jwt_claims.md  production_deployment.md  supabase_claims_setup.md  system_workflow.md  troubleshooting.md
k8s/: deployment.yaml  ingress.yaml  letsencrypt-prod-issuer.yaml  migration-job-debug.yaml  migration-job.yaml  secrets.yaml  service.yaml
keys/: propertyfinder.pem
migrations/: env.py  initial_schema.py
scripts/: add_permission_simple.py  add_super_id_permission.py  add_super_id_permission.sql  add_super_id_permission_correct_client.py  add_super_id_permission_final.py  add_super_id_permission_fixed.py  add_super_id_permission_fixed_txn.py  add_super_id_permission_uuid.py  add_super_id_permissions.py  add_super_id_permissions_docker.py  create_oauth_client.py  debug_api_response.py  debug_jwt_keys.py  debug_property_id_extraction.py  debug_rightmove_api.py  debug_secrets.py  orchestrate_data_capture.py  register_rightmove_client.py  scrape_details.py  search_properties.py  setup_microk8s.sh  test_auth_endpoints.py  test_production_flow.py  test_rightmove_api_endpoints.py  test_rightmove_flow.py  test_rightmove_flow_docker.py  test_search_flow.py  test_system_flow.py  trigger_analysis.py  trigger_batch_analysis.py  trigger_data_capture.py  update_client_credentials.py
supabase/: config.toml
super_id_service/: .env.prod.gpg  .env.test  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.migrations.yml  docker-compose.prod.yml  docker-compose.yml  todo.md
(+122 files in other folders)
