[tool.poetry]
name = "super_id_service"
version = "0.1.0"
description = "Super ID Service for generating and recording unique identifiers"
authors = ["PA Services Team"]
readme = "README.md"
packages = [{include = "super_id_service", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.101.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.22.0,<1.0.0"}
pydantic = {extras = ["email"], version = ">=2.5.0,<3.0.0"}
pydantic-settings = ">=2.0.0,<3.0.0"
sqlalchemy = ">=2.0.0,<3.0.0"
psycopg = {extras = ["binary", "pool"], version = ">=3.1.8,<4.0.0"}
greenlet = ">=3.0.0,<4.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0,<4.0.0"}
supabase = {extras = ["async"], version = ">=2.15.2,<3.0.0"}
alembic = ">=1.8.0,<2.0.0"
slowapi = ">=0.1.4,<1.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
httpx = ">=0.24.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=1.0.0,<2.0.0"
pytest-cov = ">=4.0.0,<5.0.0"
black = ">=23.3.0,<24.0.0"
ruff = ">=0.0.278,<1.0.0"
mypy = ">=0.971,<1.0.0"
pre-commit = ">=3.0.0,<4.0.0"
httpx = ">=0.28.1,<1.0.0"
asgi-lifespan = ">=2.1.0,<3.0.0"
pytest-xdist = ">=3.3.0,<4.0.0"
pytest-timeout = ">=2.2.0,<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "W", "B", "COM", "C4"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
